--- a/mobile-landing_page/index.html
+++ b/mobile-landing_page/index.html
@@ -18,7 +18,7 @@
             <i class="bi bi-list" onclick="verify()"></i>
         </div>
         <div class="mobile-catego" id="mobile-catego">
-            <a href="index.html" class="span active-span">Acceuil</a>
+            <a href="../mobile-landing_page/index.html" class="span active-span">Acceuil</a>
             <a href="../activities/activities.html" class="span">activitiés</a>
             <a href="#footer" class="span">contact</a>
         </div>
