js tweeks and files updates plus easter-egg

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="mobile-catego" id="mobile-catego">
             <a href="index.html" class="span active-span">Acceuil</a>
-            <a href="../activities/activities.html" class="span">activitiés</a>
+            <a href="/activities/activities.html" class="span">activitiés</a>
             <a href="#footer" class="span">contact</a>
         </div>
     </div>
@@ -32,7 +32,7 @@
             <h2>Groupe Scolaire Ampère Privé</h2>
             <div class="catego">
                 <a href="index.html" class="span active-span">Acceuil</a>
-                <a href="../activities/activities.html" class="span">activitiés</a>
+                <a href="/activities/activities.html" class="span">activitiés</a>
                 <a href="#footer" class="span">contact</a>
             </div>
         </div>
@@ -85,6 +85,7 @@
                 <label for="">ampereprive@gmail.com</label>
             </button>
             <p>C33,Bd. Les Alaouites Lot. Al Hana - Khouribga - N° d'Autorisation : 10/04/2015</p>
+            <p class="easter-egg">built by Aziz Safouane 🐱‍👤</p>
         </footer>
     </div>
     <script src="script.js"></script>
