--- a/activities/activities.html
+++ b/activities/activities.html
@@ -16,7 +16,7 @@
             <i class="bi bi-list" onclick="verify()"></i>
         </div>
         <div class="mobile-catego" id="mobile-catego">
-            <a href="index.html" class="span active-span" id="mobile-span">Acceuil</a>
+            <a href="../index.html" class="span active-span" id="mobile-span">Acceuil</a>
             <a href="../activities/activities.html" class="span" id="mobile-span2">activitiés</a>
             <a href="#footer" class="span" id="mobile-span3">contact</a>
         </div>
@@ -29,8 +29,8 @@
         </div>
         <h2>Groupe Scolaire Ampère Privé</h2>
         <div class="catego">
-            <a href="../landing_page/index.html" class="span ">Acceuil</a>
-            <a href="activities.html" class="span active-span">activitiés</a>
+            <a href="../index.html" class="span ">Acceuil</a>
+            <a href="../activities/activities.html" class="span active-span">activitiés</a>
             <a href="#footer" class="span">contact</a>
         </div>
     </div>
@@ -61,53 +61,8 @@
             <label for="">ampereprive@gmail.com</label>
         </button>
         <p>C33,Bd. Les Alaouites Lot. Al Hana - Khouribga - N° d'Autorisation : 10/04/2015</p>
+        <p class="easter-egg">built by Aziz Safouane 🐱‍👤</p>
     </footer>
-    <script>
-        var i = 0;
-        var txt = 'Nos activités parascolaires';
-        var speed = 80;
-        
-        function typeWriter() {
-          if (i < txt.length) {
-            document.getElementById("demo").innerHTML += txt.charAt(i);
-            i++;
-            setTimeout(typeWriter, speed);
-          }
-        }
-        typeWriter()
-        function show_menu(){
-            var nav = document.getElementById("mobile-catego");
-            nav.style.opacity = '100';
-            nav.style.transition = '600ms';
-            var reds = document.getElementById('mobile-span')
-            reds.style.display = "block";
-            var reds2 = document.getElementById('mobile-span2')
-            reds2.style.display = "block";
-            var reds3 = document.getElementById('mobile-span3')
-            reds3.style.display = "block";
-        }
-        function hide_menu(){
-            var nav = document.getElementById("mobile-catego");
-            nav.style.opacity = '0';
-            nav.style.transition = '600ms';
-            var reds = document.getElementById('mobile-span')
-            reds.style.display = "none";
-            var reds2 = document.getElementById('mobile-span2')
-            reds2.style.display = "none";
-            var reds3 = document.getElementById('mobile-span3')
-            reds3.style.display = "none";
-        }
-    function verify() {
-        var nav = document.getElementById("mobile-catego");
-        var computedStyle = window.getComputedStyle(nav);
-
-        if (computedStyle.opacity === '0') {
-            show_menu();
-        } 
-        else{
-            hide_menu();
-        }
-    }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
