--- a/activities/activities.html
+++ b/activities/activities.html
@@ -60,8 +60,8 @@
             <i class="bi bi-envelope-at"></i>
             <label for="">ampereprive@gmail.com</label>
         </button>
-        <p>C33,Bd. Les Alaouites Lot. Al Hana - Khouribga - N° d'Autorisation : 10/04/2015</p>
-        <p class="easter-egg">built by Aziz Safouane 🐱‍👤</p>
+        <p class="auto">C33,Bd. Les Alaouites Lot. Al Hana - Khouribga - N° d'Autorisation : 10/04/2015</p>
+        <p class="dev-text">built by Aziz Safouane 🐱‍👤</p>
     </footer>
     <script src="script.js"></script>
 </body>
