--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             </div>
         </div>
         <div class="content">
-            <img src="../images/IMG-20240623-WA0000.jpg" alt="Institut">
+            <div class="img-cont">
+                <img src="../images/IMG-20240623-WA0000.jpg" alt="Institut">
+            </div>
             <div class="text">
                 <h1>Groupe Scolaire Ampère Privé</h1><br>
                 <p>Le groupe scolaire Ampère est une école composée de plusieurs classes  (maternelle - primaire -collège).L'établissement a été fondé par monsieur El Mjabar pour offrir une éducation meilleure, bien-veillante et épanuie. L'école ouvre ses portes d'enregistrement chaque année pour satisfaire la demande qui devient de plus en plus forte mais la place vient vite à manquer.</p>
