added watch tab for youtube and updated responsiveness

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="mobile-catego" id="mobile-catego">
             <a href="index.html" class="span active-span">Acceuil</a>
             <a href="/activities/activities.html" class="span">activitiés</a>
+            <a href="/watch/index.html" class="span">watch</a>
             <a href="#footer" class="span">contact</a>
         </div>
     </div>
@@ -33,6 +34,7 @@
             <div class="catego">
                 <a href="index.html" class="span active-span">Acceuil</a>
                 <a href="/activities/activities.html" class="span">activitiés</a>
+                <a href="/watch/index.html" class="span">watch</a>
                 <a href="#footer" class="span">contact</a>
             </div>
         </div>
