--- a/watch/index.html
+++ b/watch/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Groupe Scolaire Ampère Privé : Activités</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
-    <link rel="icon" href="../images/transparent logo.png">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
     <div class="mobile-nav">
@@ -23,23 +22,27 @@
         </div>
     </div>
     <div class="nav">
-        <i class="bi bi-list mobile-menu" onclick="verify()"></i>
         <div class="logo">
             <img src="../images/transparent logo.png" alt="Groupe Scolaire Ampère Privé">
             
         </div>
         <h2>Groupe Scolaire Ampère Privé</h2>
         <div class="catego">
-            <a href="../index.html" class="span ">Acceuil</a>
-            <a href="../activities/activities.html" class="span active-span">activitiés</a>
-            <a href="../watch/index.html" class="span">watch</a>
+            <a href="../index.html" class="span">Acceuil</a>
+            <a href="../activities/activities.html" class="span">activitiés</a>
+            <a href="../watch/index.html" class="span active-span">watch</a>
             <a href="#footer" class="span">contact</a>
         </div>
     </div>
-    <h1 id="demo" ></h1>
-    <div class="fb-container">
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fampereprive&tabs=timeline&width=500&height=3310&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="500" height="2900" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    <h1 id="demo"></h1>
+    <iframe class="vid1"src="https://www.youtube.com/embed?listType=playlist&list=UU60flQuqAl2tNTa3a2qbJKA&index=1"></iframe>
+    <h2 id="hh2">Récemment publié</h2>
+    <div class="previous">
+        <iframe src="https://www.youtube.com/embed?listType=playlist&list=UU60flQuqAl2tNTa3a2qbJKA&index=2"></iframe>
+        <iframe src="https://www.youtube.com/embed?listType=playlist&list=UU60flQuqAl2tNTa3a2qbJKA&index=9"></iframe>
+        <iframe src="https://www.youtube.com/embed?listType=playlist&list=UU60flQuqAl2tNTa3a2qbJKA&index=6"></iframe>
     </div>
+    <a href="https://www.youtube.com/@groupescolaireampere" target="_blank"><button class="more">voir plus...</button></a>
     <footer id="footer">
         <h2>Visitez nos réseaux sociaux et contactez nous</h2>
         <a href="https://www.facebook.com/ampereprive?locale=fr_FR" target="_blank"><button class="facebook-redirect">
@@ -62,7 +65,8 @@
             <i class="bi bi-envelope-at"></i>
             <label for="">ampereprive@gmail.com</label>
         </button>
-        <p class="auto">C33,Bd. Les Alaouites Lot. Al Hana - Khouribga - N° d'Autorisation : 10/04/2015</p>
+        <p>C33,Bd. Les Alaouites Lot. Al Hana - Khouribga - N° d'Autorisation : 10/04/2015</p>
+        <p class="easter-egg">built by Aziz Safouane 🐱‍👤</p>
     </footer>
     <script src="script.js"></script>
 </body>
